<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bluebackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:orientation="horizontal" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:layout_marginTop="16dp"/>
        <include layout="@layout/home_button" />
            <!--android:drawableStart="@drawable/return_arrow"/> -->
            <!--android:text="Too menu" /> -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_viewer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:src="@drawable/my_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight = "0.2"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/key"
                    android:textColor="@color/white"
                    android:textSize="25dp"
                    android:textAlignment="center"
                    android:layout_weight = "0.2"/>

                <Switch
                    android:id="@+id/food_switch"
                    android:text="@string/show_food_bars"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight = "0.2"/>

                <Switch
                    android:id="@+id/accomodation_switch"
                    android:text="@string/show_accommodation"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight = "0.2"/>
                <Switch
                    android:id="@+id/parking_switch"
                    android:text="@string/show_parking"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight = "0.2"/>
                <Button
                    android:text="@string/expand_computer_science_building"
                    android:id="@+id/expand_map"
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height = "0dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
