<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluebackground"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/infoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="45dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/infoText"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="#30ffffff"
        android:hint="@string/first_name"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:drawableLeft="@drawable/baseline_person_outline_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:id="@+id/lName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fName"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="#30ffffff"
        android:hint="@string/last_name"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:drawableLeft="@drawable/baseline_person_outline_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lName"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="#30ffffff"
        android:hint="@string/email"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:drawableLeft="@drawable/baseline_mail_outline_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:id="@+id/problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="#30ffffff"
        android:hint="@string/enter_details_of_your_problem_here"
        android:padding="60dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:drawableLeft="@drawable/baseline_report_problem_24"
        android:drawablePadding="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/problemSubBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/problem"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#2C7FC1"
        android:text="SUBMIT!"
        android:textSize="35dp" />
    <include layout="@layout/home_button" />

</RelativeLayout>
