<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluebackground"
    tools:context=".SearchActivity">

    <!-- TextView for Teacher Question -->
    <TextView
        android:id="@+id/teacherQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/discover_the_modules_you_will_be_studying_in_stage_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/selectDropbox" />

    <!-- TextView for Select Dropbox -->
    <TextView
        android:id="@+id/selectDropbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_module_to_see_more_information"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherQuestion"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer" />

    <!-- LinearLayout for Buttons -->
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectDropbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5">

        <!-- First Column of Buttons -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:text="@string/introduction_to_object_oriented_programming" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:text="@string/foundations_of_computing_i" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:text="@string/foundations_of_computing_ii" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:text="@string/databases_and_the_web" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:text="Human Computer Interaction" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:text="Computers and the Cloud" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:text="Problem Solving with Algorithms" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:text="Further Object-Oriented Programming" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
